--- a/index.html
+++ b/index.html
@@ -1,66 +1,120 @@
-<html lang="en">
+<!DOCTYPE html>
+<html dir="ltr" lang="en-US">
 <head>
- <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
- <link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
- <link type="text/css" rel="stylesheet" href="styles.css" media="all" />
- <link rel="stylesheet" href="img/icomoon/style.css"></head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <link href="https://fonts.googleapis.com/css?family=Lato|Lobster" rel="stylesheet">
+   <link type="text/css" rel="stylesheet" href="new_styles.css" media="all" />
+  <link rel="stylesheet" href="img/icomoon/style.css"></head>
 </head>
 
 <body>
-  <h1>Maaret Pyhäjärvi</h1>
+
+<nav class="mainnav">
+  	<ul>
+  		<li class="selected">
+  			<a href="index.html">Home</a>
+  		</li>
+  		<li>
+  			<a href="myArticles.html">Published Material</a>
+  		</li>
+  		<li>
+  			<a href="myTalks.html">My Talks, Workshops and Trainings</a>
+  		</li>
+  	</ul>
+</nav>
 
 <table>
+<tr>
+  <td style="width:5%" align="center">
+  </td>
   <td>
-<span class="icon-envelope-o"></span> <a href="mailto:maaret@iki.fi" >maaret@iki.fi</a><p>
+    <img class="headshot" src="img/maaret_transparent.png" style="height:400px;"/>
+  </td>
+  <td style="width:70%" align="center" >
+    <h1> Maaret Pyhäjärvi </h1>
 
-<span class="icon-twitter-square"></span> <a href="http://twitter.com/maaretp" target="_blank">Follow me</a><br>
-<span class="icon-facebook-square"></span> <a href="http://facebook.com/MaaretPy/" target="_blank">Like my page</a><br>
-<span class="icon-linkedin-square"></span> <a href="https://fi.linkedin.com/in/maaret" target="_blank">Link with me</a><p>
+    Feedback Fairy. <br>
+    Tester, (Polyglot) Programmer. <br>
+    Teacher and Mentor. <br>
+    International Keynote Speaker. <br>
+    Author. <br>
+    Conference Organizer and Community Facilitator. <br>
+    Engineering Manager at F-Secure. <br>
+    She/Her. <br>
+    <br>
 
-<span class="icon-fort-awesome"></span> <a href="myTalks.html" target="_blank">My Talks, Workhops and Trainings</a><p>
+    <i>I make people awesome.</i><p>
 
-<span class="icon-star-o"></span> <a href="http://visible-quality.blogspot.com" target="_blank">My blog</a><br>
-<span class="icon-youtube"></span> <a href="https://www.youtube.com/channel/UCrTlIKuIS-LmRk-aAbcxTKg" target="_blank">My videos</a><br>
-<span class="icon-slideshare"></span> <a href="http://www.slideshare.net/maaretp" target="_blank">My slides</a><br>
-<span class="icon-star"></span> <a href="myArticles.html" target="_blank">My Writings</a><p>
+    <h4>Spoken at events in 24 countries</h4>
+    <table>
+    <td><img class="flag" height="20" src="flags/4x3/fi.svg" alt="Finland "></td>
+    <td><img class="flag" height="20" src="flags/4x3/se.svg" alt="Sweden"></td>
+    <td><img class="flag" height="20" src="flags/4x3/no.svg" alt="Norway"></td>
+    <td><img class="flag" height="20" src="flags/4x3/dk.svg" alt="Denmark"></td>
+    <td><img class="flag" height="20" src="flags/4x3/lv.svg" alt="Latvia"></td>
+    <td><img class="flag" height="20" src="flags/4x3/ee.svg" alt="Estonia"></td>
+    <td><img class="flag" height="20" src="flags/4x3/us.svg" alt="US"></td>
+    <td><img class="flag" height="20" src="flags/4x3/ch.svg" alt="Switzerland"></td>
+    <td><img class="flag" height="20" src="flags/4x3/hu.svg" alt="Hungary"></td>
+    <td><img class="flag" height="20" src="flags/4x3/fr.svg" alt="France"></td>
+    <td><img class="flag" height="20" src="flags/4x3/be.svg" alt="Belgium"></td>
+    <td><img class="flag" height="20" src="flags/4x3/hr.svg" alt="Croatia"></td>
+    <td><img class="flag" height="20" src="flags/4x3/md.svg" alt="Moldova"></td>
+    <td><img class="flag" height="20" src="flags/4x3/pt.svg" alt="Portugal"></td>
+    <td><img class="flag" height="20" src="flags/4x3/pl.svg" alt="Poland"></td>
+    <td><img class="flag" height="20" src="flags/4x3/ro.svg" alt="Romania"></td>
+    <td><img class="flag" height="20" src="flags/4x3/nl.svg" alt="Netherlands"></td>
+    <td><img class="flag" height="20" src="flags/4x3/rs.svg" alt="Serbia"></td>
+    <td><img class="flag" height="20" src="flags/4x3/de.svg" alt="Germany"></td>
+    <td><img class="flag" height="20" src="flags/4x3/es.svg" alt="Spain"></td>
+    <td><img class="flag" height="20" src="flags/4x3/gb.svg" alt="United Kingdom"></td>
+    <td><img class="flag" height="20" src="flags/4x3/bg.svg" alt="Bulgaria"></td>
+    <td><img class="flag" height="20" src="flags/4x3/in.svg" alt="India"></td>
+    <td><img class="flag" height="20" src="flags/4x3/au.svg" alt="Australia"></td>
 
-<span class="icon-book"></span> <a href="https://leanpub.com/mobprogrammingguidebook" target="_blank">Check out Mob Programming Guidebook</a><br>
-<span class="icon-ticket"></span> <a href="https://drive.google.com/folderview?id=0B07e3JZGe_haTnlXUHJ4MXo0aTA&usp=sharing" target="_blank">My talk and course brochures</a><p>
-
-<span class="icon-lanyrd"></span> <a href="http://lanyrd.com/profile/maaretp/" target="_blank">My events on Lanyrd</a><p>
-
-
-
-  <script type="text/javascript" src="https://secure.skypeassets.com/i/scom/js/skype-uri.js"></script>
-  <div id="SkypeButton_Call_maaret_pyhajarvi_1">
-   <script type="text/javascript">
-   Skype.ui({
-   "name": "dropdown",
-   "element": "SkypeButton_Call_maaret_pyhajarvi_1",
-   "participants": ["maaret_pyhajarvi"],
-   "imageColor": "white",
-   "imageSize": 32
-   });
-   </script>
- </div>
-
-
+      <!--Total talk count by end of 2017 353 talks-->
+      <!--add flags of all countries I've spoken at-->
+    </table>
 </td>
+</tr>
 </table>
 
-<!-- Hotjar Tracking Code for http://maaretp.com -->
-<script>
-   (function(h,o,t,j,a,r){
-       h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-       h._hjSettings={hjid:183445,hjsv:5};
-       a=o.getElementsByTagName('head')[0];
-       r=o.createElement('script');r.async=1;
-       r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-       a.appendChild(r);
-   })(window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');
-</script>
+<footer class="main-footer">
+    <div class="contact">
+        <h3>Get in Touch</h3>
+        <span class="icon-envelope-o"></span> <a href="mailto:maaret@iki.fi"> maaret@iki.fi</a><p>
+        <span class="icon-twitter-square"></span> <a href="http://twitter.com/maaretp" target="_blank"> Follow me</a><br>
+        <span class="icon-facebook-square"></span> <a href="http://facebook.com/MaaretPy/" target="_blank"> Like my page</a><br>
+        <span class="icon-linkedin-square"></span> <a href="https://fi.linkedin.com/in/maaret" target="_blank"> Link with me</a><p>
+        <span class="icon-star-o"></span> <a href="http://visible-quality.blogspot.com" target="_blank"> Read my blog</a><br>
+        <span class="icon-youtube"></span> <a href="https://www.youtube.com/channel/UCrTlIKuIS-LmRk-aAbcxTKg" target="_blank"> Watch my videos</a><br>
+        <span class="icon-slideshare"></span> <a href="http://www.slideshare.net/maaretp" target="_blank"> Check my slides</a><br>
+    </div>
 
+    <nav class="footer-nav">
+        <h3>My contributions ...</h3>
+        <ul>
+            <li><span class="icon-star"></span><a href="myArticles.html"> Blog, &amp; Articles &amp; Podcasts</a></li>
+            <!--<li><a href="books.html">Books</a></li>-->
+            <li><span class="icon-fort-awesome"></span><a href="myTalks.html"> Speaking</a></li>
+            <li><span class="icon-book"></span><a href="https://leanpub.com/exploratorytesting" target="_blank"> LeanPub: Exploratory Testing</a></li>
+            <li><span class="icon-book"></span><a href="https://leanpub.com/mobprogrammingguidebook" target="_blank"> LeanPub: Mob Programming Guidebook</a></li>
+            <li>  <span class="icon-ticket"></span><a href="https://drive.google.com/folderview?id=0B07e3JZGe_haTnlXUHJ4MXo0aTA&usp=sharing" target="_blank">My talk and course brochures</a></li>
+
+
+        </ul>
+    </nav>
+
+    <div class="footer-elsewhere">
+        <h3>... and my projects</h3>
+        <ul>
+          <li><a href="http://europeantestingconference.eu"> European Testing Conference </a> </li>
+          <li><a href="https://speaking-easy.com"> Speak Easy </a></li>
+          <li><a href="http://testausyhdistys.fi"> Finnish Association for Software Testing</a></li>
+          <li><a href="https://www.meetup.com/Tech-Excellence-Finland/"> Tech Excellence Finland Meetup </a></li>
+          <li>Awesome Tester Conference (coming up)</li>
+        </ul>
+    </div>
+</footer>
 
 </body>
-
-</html>
