--- a/myArticles.html
+++ b/myArticles.html
@@ -24,7 +24,6 @@
 
   <ul style="text-align: left;">
     <li><a href="https://dojo.ministryoftesting.com/lessons/mob-testing-an-introduction-experience-report">Mob Testing - an Introduction and Experience Report</a>. In <i>Ministry of Testing, the Testing Planet 2018</i>, January 2018.
-    <li>< href="https://drive.google.com/open?id=0B07e3JZGe_haVmRfOUFDLWRMcVU">Five Controversial Ideas to Increase Your Impact as a Tester.</a> In Women Testers, July 2017.
 	  <li>Making Teams Awesome (to be published in autumn 2018) in <a href="https://www.quality-matters.org/">Quality Matters</a> 1/2018
 	  <li><a href="https://dojo.ministryoftesting.com/lessons/mob-testing-an-introduction-experience-report">Mob Testing: An Introduction and Experience Report</a> <i>in Ministry of Testing, the Testing Planet 2018</i>, January 2018.
     <li><a href="https://drive.google.com/file/d/0B07e3JZGe_haVmRfOUFDLWRMcVU/view?usp=sharing">Five Controversial Ideas to Increase Your Impact as a Tester</a>. In Women Testers, August 2017.
@@ -69,7 +68,7 @@
 
   <ul style="text-align: left;">
     <li><a href="http://leanpub.com/mobprogrammingguidebook">Mob Programming Guidebook (co-authored with Llewellyn Falco)</li>
-    <li><a href="http://leanpub.com/exploratorytesting">Exploratory Testing (to be published)</li>
+    <li><a href="http://leanpub.com/exploratorytesting">Exploratory Testing (ongoing publishing work</li>
   </ul>
 
   </td>
@@ -77,12 +76,6 @@
 
 <table>
   <td>
-
-  <h2>MY BLOG</h2>
-
-  <ul style="text-align: left;">
-    <li><a href="http://visible-quality.blogspot.fi">A Seasoned Testers Crystal Ball</li>
-  </ul>
 
   </td>
 </table>
