Updating menu sizes

--- a/myArticles.html
+++ b/myArticles.html
@@ -1,4 +1,5 @@
-<html lang="en">
+<!DOCTYPE html>
+<html dir="ltr" lang="en-US">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <link href="https://fonts.googleapis.com/css?family=Lato|Lobster" rel="stylesheet">
