Old HICCS article 2003

--- a/myArticles.html
+++ b/myArticles.html
@@ -48,6 +48,7 @@
     <li><a href="https://drive.google.com/open?id=0B07e3JZGe_haNC03UVF4c0Y2UkE">My Year of Lessons for Aspiring Speakers. In <i>Women Testers</i>, January 2016</li>
     <li><a href="https://drive.google.com/open?id=0B07e3JZGe_haY1VEdVdQQTdBUWM">Turn up the Good. A Tester Meets Mob Programming. In <i>Testing Trapeze</i>, August 2015</li>
     <li><a href="https://drive.google.com/open?id=0B07e3JZGe_haMjZPUXQwLThlbnM">Use of Rapid Reporter in Exploratory Testing. In <i>Testing Circus</i>, April 2014</li>
+    <li><a href="https://drive.google.com/file/d/1JONa8kSIuJ7bCfYBp3eQurWMkSeHEGKK/view?usp=sharing">Increasing Understanding of the Modern Testing Perspective in Software Product Development Projects. in <i>the Proceedings of the Hawai'i International Conference on System Sciences</i>, 2003.</li>
     <li><a href="https://drive.google.com/open?id=0B07e3JZGe_haX0JyTGtuMDRHczg">A Tentative Framework for Managing Software Product Development in Small Companies. In <i>Proceedings of HICCS</i>, 2002.</li>
   </ul>
 
