--- a/myTalks.html
+++ b/myTalks.html
@@ -65,20 +65,24 @@
 
   <h2>UPCOMING CONFERENCES & MEETUPS & WEBINARS & TRAININGS</h2>
 
-Since July 2018, I consider myself as a retired public speaker until further notice.
-I do online talks but want to limit travel and conferences to its bare minimum.
-I'm always happy to propose other awesome speakers, and I do keep track of them.
-Contact me at maaret@iki.fi.
-
   I will be in<br />
   <ul style="text-align: left;">
   <li><a href="https://dojo.ministryoftesting.com/events/testbash-australia-2018">TestBash Australia</a> in Sydney, Australia 19.10.2018</li>
+  <li><a href="https://dddeurope.com/2019/">DDD Europe</a> in Amsterdam, the Netherlands 31.1.2019 - 1.2.2019</li>
+  <li><a href="http://europeantestingconference.eu">European Testing Conference</a> in Valencia, Spain 13-14.2.2019</li>
+  <li><a href="https://2019.agileindia.org">Agile India 2019</a> in Bangalore, India 18-23.3.2019</li>
   </ul>
 
   I will be doing webinars/online conferences you can be a part of <br />
   <ul style="text-align: left;">
     <li><a href="http://conferenciagiletesters.com">Breaking Illusions with Testing</a> October 28th 2018</li>
   </ul>
+
+  I will be teaching some public courses<br />
+  <ul style="text-align: left;">
+    <li>Acceptance Testing (<a href="https://events.almatalent.fi/hyvaksymistestaus/">Hyväksymistestaus</a>), 2 day public course with Alma Talent, Helsinki, Finland 6-7.11.2018 </li>
+  </ul>
+
 
   <!--
   <H2>UPCOMING PUBLIC TRAININGS</H2>
@@ -97,17 +101,36 @@ Contact me at maaret@iki.fi.
 <h2>FULL LIST OF SPEAKING ENGAGEMENTS</h2>
 <div style="text-align: left;">
 
+<i>Next Level Teamwork: Pairing and Mobbing</i><br />
+  &nbsp; Keynote Speaker at TestBash Australia (19.10.2018)<br />
+<br />
+
+<i>Breaking Illusions with Testing</i><br />
+  &nbsp; Keynote Speaker at DDD Europe (31.1-1.2.2019)<br />
+  &nbsp; Speaker at Conferencia Agile Testers - Brazilian Online Conference (28.10.2018)<br />
+<br />
+
+<i>Acceptance Testing (Hyväksymistestaus)</i><br />
+&nbsp; Trainer at Alma Hyväksymistestaus 2-day course, Helsinki (6-7.11.2018)<br />
+&nbsp; Trainer at Customer Tailored 2-day course, Tampere (15-16.11.2018)<br />
+<br />
+
 <i>Teaching and Coaching Exploratory Testing with an Example</i><a href="https://www.youtube.com/watch?v=ZWI6MFvxQJk">[video]</a><br />
 &nbsp; Speaker at AST Webinar (13.9.2018)<br />
 <br />
 
 <i>Intersection of Automation and Exploratory Testing</i> <a href="https://www.youtube.com/watch?v=Es4SfYog5VA&t=12s">[video]</a><br />
+&nbsp; Speaker at Software Testing Helsinki Meetup (5.10.2018)<br />
 &nbsp; Keynote Speaker at Selenium Conference India (29-30.6.2018)<br />
 &nbsp; Speaker at The Testing Guild Online Conference (20.6.2018)<br />
 <br />
 
 <i>Test Automation Primer, a one day course on Test Automation</i><br />
 &nbsp; Trainer at Alma Robotestaus event, Helsinki (13.6.2018)<br />
+<br />
+
+<i>Java Programming with the Intentional Method</i><br />
+&nbsp; Trainer at F-Secure #MimmitKoodaa -workshop, Helsinki (7.4.2018)<br />
 <br />
 
 <i>Holding Space: Making Things Better by Doing Less</i><br />
