--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <td><img class="flag" height="20" src="flags/4x3/in.svg" alt="India"></td>
     <td><img class="flag" height="20" src="flags/4x3/au.svg" alt="Australia"></td>
 
-      <!--Total talk count by end of 2017 353 talks-->
+      <!--Total talk count by end of 2018 380 talks-->
       <!--add flags of all countries I've spoken at-->
     </table>
 </td>
@@ -99,6 +99,7 @@
             <li><span class="icon-fort-awesome"></span><a href="myTalks.html"> Speaking</a></li>
             <li><span class="icon-book"></span><a href="https://leanpub.com/exploratorytesting" target="_blank"> LeanPub: Exploratory Testing</a></li>
             <li><span class="icon-book"></span><a href="https://leanpub.com/mobprogrammingguidebook" target="_blank"> LeanPub: Mob Programming Guidebook</a></li>
+            <li><span class="icon-book"></span><a href="https://leanpub.com/StrongStylePairProgramming" target="_blank"> LeanPub: Strong-Style Pair Programming</a></li>
             <li>  <span class="icon-ticket"></span><a href="https://drive.google.com/folderview?id=0B07e3JZGe_haTnlXUHJ4MXo0aTA&usp=sharing" target="_blank">My talk and course brochures</a></li>
 
 
@@ -112,7 +113,7 @@
           <li><a href="https://speaking-easy.com"> Speak Easy </a></li>
           <li><a href="http://testausyhdistys.fi"> Finnish Association for Software Testing</a></li>
           <li><a href="https://www.meetup.com/Tech-Excellence-Finland/"> Tech Excellence Finland Meetup </a></li>
-          <li>Awesome Tester Conference (coming up)</li>
+        <!--  <li>Awesome Tester Conference (coming up)</li>-->
         </ul>
     </div>
 </footer>
