--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <i>I make people awesome.</i><p>
 
-    <h4>Spoken at events in 24 countries</h4>
+    <h4>Spoken at events in 25 countries</h4>
     <table>
     <td><img class="flag" height="20" src="flags/4x3/fi.svg" alt="Finland "></td>
     <td><img class="flag" height="20" src="flags/4x3/se.svg" alt="Sweden"></td>
@@ -71,7 +71,7 @@
     <td><img class="flag" height="20" src="flags/4x3/bg.svg" alt="Bulgaria"></td>
     <td><img class="flag" height="20" src="flags/4x3/in.svg" alt="India"></td>
     <td><img class="flag" height="20" src="flags/4x3/au.svg" alt="Australia"></td>
-
+    <td><img class="flag" height="20" src="flags/4x3/tr.svg" alt="Turkey"></td>
       <!--Total talk count by end of 2018 380 talks-->
       <!--add flags of all countries I've spoken at-->
     </table>
