Updated my talks

--- a/myArticles.html
+++ b/myArticles.html
@@ -27,6 +27,14 @@
 <table>
   <td>
 
+  <h2>BOOKS</h2>
+  <ul style="text-align: left;">
+    <li><a href="http://mobprogrammingguidebook.xyz">Mob Programming Guidebook</a></li>
+    <li><a href="http://exploratorytesting.xyz">Exploratory Testing</a></li>
+    <li><a href="http://strongstylepairprogramming.xyz">Strong-Style Pair Programming</a></li>
+  </ul>
+
+
   <h2>BLOGS</h2>
 
   <ul style="text-align: left;">
