--- a/myTalks.html
+++ b/myTalks.html
@@ -67,10 +67,13 @@
 
   I will be in<br />
   <ul style="text-align: left;">
-  <li><a href="https://dddeurope.com/2019/">DDD Europe</a> in Amsterdam, the Netherlands 31.1.2019 - 1.2.2019</li>
-  <li><a href="http://europeantestingconference.eu">European Testing Conference</a> in Valencia, Spain 13-14.2.2019</li>
-  <li><a href="https://2019.agileindia.org">Agile India 2019</a> in Bangalore, India 18-23.3.2019</li>
-  <li>Testinstanbul in Istanbul, Turkey April 2019</li>
+    <li><a href="https://testistanbul.org">TestInstanbul</a> in Istanbul, Turkey, April 16th 2019</li>
+    <li><a href="https://react-finland.fi">React Finland</a> in Helsinki, Finland, April 25-26th 2019</li>
+    <li><a href="https://techexcellence.dev">Tech Excellence Conference</a> in Helsinki, Finland, June 3rd 2019</li>
+    <li><a href="https://socratesuk.org">Socrates UK Unconference</a> in London, UK, June 2019 </li>
+    <li><a href="https://koulutus.almatalent.fi/robo-testaus/">Robotestaus</a> in Helsinki, Finland, June 12-13th 2019 </li>
+    <li><a href="https://www.associationforsoftwaretesting.org/conference/cast2019/">Conference for Association for Software Testing (CAST)</a> in Florida, USA, August 12-15th, 2019</li>
+    <li><a href="https://eventil.com/events/flowcon-2019/">FlowCon</a> in Paris, France, December 12-13th 2019</li>
   </ul>
 
   <!--
@@ -90,13 +93,32 @@
 <h2>FULL LIST OF SPEAKING ENGAGEMENTS</h2>
 <div style="text-align: left;">
 
-<i>Next Level Teamwork: Pairing and Mobbing</i><br />
-  &nbsp; Keynote Speaker at TestBash Australia (19.10.2018)<br />
+<i>Intersection of Automation and Exploratory Testing</i> <a href="https://www.youtube.com/watch?v=Es4SfYog5VA&t=12s">[video]</a><br />
+  &nbsp; Keynote Speaker at TestInstanbul (16.4.2019)<br />
+  &nbsp; Keynote Speaker at Selenium Conference India (29-30.6.2018)<br />
+  &nbsp; Speaker at Software Testing Helsinki Meetup (5.10.2018)<br />
+  &nbsp; Speaker at The Testing Guild Online Conference (20.6.2018)<br />
+<br />
+
+<i>Exploratory Testing on Computer Interfaces (APIs)</i><br />
+  &nbsp; Trainer at Conference for Association for Software Testing (CAST) 2019 (12.8.2019)<br />
+<br />
+
+<i>Practices Change - Moving to Delivering Continuously</i><br />
+  &nbsp; Speaker at Agile India (22.3.2019) <br />
+<br />
+
+<i>Working without a Product Owner</i><br />
+  &nbsp; Speaker at Agile India (21.3.2019)<br />
 <br />
 
 <i>Breaking Illusions with Testing</i><br />
   &nbsp; Keynote Speaker at DDD Europe (31.1-1.2.2019)<br />
   &nbsp; Speaker at Conferencia Agile Testers - Brazilian Online Conference (28.10.2018)<br />
+<br />
+
+<i>Next Level Teamwork: Pairing and Mobbing</i><br />
+  &nbsp; Keynote Speaker at TestBash Australia (19.10.2018)<br />
 <br />
 
 <i>Acceptance Testing (Hyväksymistestaus)</i><br />
@@ -108,19 +130,12 @@
 <br />
 
 <i>Quality - Learning is all that matters </i><br />
-&nbsp; Keynote Speaker at company event (20.12.2018)<br />
 &nbsp; Keynote Speaker at company event (11.1.2019)<br />
+&nbsp; Keynote Speaker at company event (20.12.2018)<br />
 <br />
 
 <i>Teaching and Coaching Exploratory Testing with an Example</i><a href="https://www.youtube.com/watch?v=ZWI6MFvxQJk">[video]</a><br />
 &nbsp; Speaker at AST Webinar (13.9.2018)<br />
-<br />
-
-<i>Intersection of Automation and Exploratory Testing</i> <a href="https://www.youtube.com/watch?v=Es4SfYog5VA&t=12s">[video]</a><br />
-&nbsp; Keynote Speaker at Testinstanbul (4.2019)<br />
-&nbsp; Keynote Speaker at Selenium Conference India (29-30.6.2018)<br />
-&nbsp; Speaker at Software Testing Helsinki Meetup (5.10.2018)<br />
-&nbsp; Speaker at The Testing Guild Online Conference (20.6.2018)<br />
 <br />
 
 <i>Test Automation Primer, a one day course on Test Automation</i><br />
@@ -230,6 +245,7 @@
 <br />
 
 <i>Agile Testing -course (2 days)</i> <br />
+&nbsp; Trainer at a customer organization, Helsinki, Finland (3-4.4.2019)<br />
 &nbsp; Trainer at public course with Urasilta, Jyväskylä, Finland (29-30.5.2017)<br />
 <br />
 
