--- a/index.html
+++ b/index.html
@@ -63,7 +63,6 @@
     <td><img class="flag" height="20" src="flags/4x3/pt.svg" alt="Portugal"></td>
     <td><img class="flag" height="20" src="flags/4x3/pl.svg" alt="Poland"></td>
     <td><img class="flag" height="20" src="flags/4x3/ro.svg" alt="Romania"></td>
-    <td><img class="flag" height="20" src="flags/4x3/nl.svg" alt="Netherlands"></td>
     <td><img class="flag" height="20" src="flags/4x3/rs.svg" alt="Serbia"></td>
     <td><img class="flag" height="20" src="flags/4x3/de.svg" alt="Germany"></td>
     <td><img class="flag" height="20" src="flags/4x3/es.svg" alt="Spain"></td>
@@ -97,9 +96,9 @@
             <li><span class="icon-star"></span><a href="myArticles.html"> Blog, &amp; Articles &amp; Podcasts</a></li>
             <!--<li><a href="books.html">Books</a></li>-->
             <li><span class="icon-fort-awesome"></span><a href="myTalks.html"> Speaking</a></li>
-            <li><span class="icon-book"></span><a href="https://leanpub.com/exploratorytesting" target="_blank"> LeanPub: Exploratory Testing</a></li>
-            <li><span class="icon-book"></span><a href="https://leanpub.com/mobprogrammingguidebook" target="_blank"> LeanPub: Mob Programming Guidebook</a></li>
-            <li><span class="icon-book"></span><a href="https://leanpub.com/StrongStylePairProgramming" target="_blank"> LeanPub: Strong-Style Pair Programming</a></li>
+            <li><span class="icon-book"></span><a href="http://exploratorytesting.xyz" target="_blank"> LeanPub: Exploratory Testing</a></li>
+            <li><span class="icon-book"></span><a href="http://mobprogrammingguidebook.xyz" target="_blank"> LeanPub: Mob Programming Guidebook</a></li>
+            <li><span class="icon-book"></span><a href="http://strongstylepairprogramming.xyz" target="_blank"> LeanPub: Strong-Style Pair Programming</a></li>
             <li>  <span class="icon-ticket"></span><a href="https://drive.google.com/folderview?id=0B07e3JZGe_haTnlXUHJ4MXo0aTA&usp=sharing" target="_blank">My talk and course brochures</a></li>
 
 
