--- a/myTalks.html
+++ b/myTalks.html
@@ -26,7 +26,7 @@
 <h1>Speaking Engagements</h1>
 
 <table width="75%">
-<th>Spoken at events in 24 countries</th>
+<th>Spoken at events in 25 countries</th>
 <table width="75%">
 <td><img class="flag" height="20" src="flags/4x3/fi.svg" alt="Finland "></td>
 <td><img class="flag" height="20" src="flags/4x3/se.svg" alt="Sweden"></td>
@@ -52,6 +52,7 @@
 <td><img class="flag" height="20" src="flags/4x3/bg.svg" alt="Bulgaria"></td>
 <td><img class="flag" height="20" src="flags/4x3/in.svg" alt="India"></td>
 <td><img class="flag" height="20" src="flags/4x3/au.svg" alt="Australia"></td>
+<td><img class="flag" height="20" src="flags/4x3/gr.svg" alt="Greece"></td>
 
   <!--Total talk count by end of 2017 353 talks-->
   <!--add flags of all countries I've spoken at-->
@@ -67,12 +68,12 @@
 
   I will be in<br />
   <ul style="text-align: left;">
-    <li><a href="https://testistanbul.org">TestInstanbul</a> in Istanbul, Turkey, April 16th 2019</li>
-    <li><a href="https://react-finland.fi">React Finland</a> in Helsinki, Finland, April 25-26th 2019</li>
     <li><a href="https://techexcellence.dev">Tech Excellence Conference</a> in Helsinki, Finland, June 3rd 2019</li>
     <li><a href="https://socratesuk.org">Socrates UK Unconference</a> in London, UK, June 2019 </li>
+    <li><a href="http://testingcup.pl">Testing Cup</a> in Poznan, Poland, June 19-11th 2019</li>
     <li><a href="https://koulutus.almatalent.fi/robo-testaus/">Robotestaus</a> in Helsinki, Finland, June 12-13th 2019 </li>
     <li><a href="https://www.associationforsoftwaretesting.org/conference/cast2019/">Conference for Association for Software Testing (CAST)</a> in Florida, USA, August 12-15th, 2019</li>
+    <li><a href="https://agilesummit.gr">Agile Greece Summit</a> in Athens, Greece, September 19-20th 2019</li>
     <li><a href="https://eventil.com/events/flowcon-2019/">FlowCon</a> in Paris, France, December 12-13th 2019</li>
   </ul>
 
@@ -94,6 +95,8 @@
 <div style="text-align: left;">
 
 <i>Intersection of Automation and Exploratory Testing</i> <a href="https://www.youtube.com/watch?v=Es4SfYog5VA&t=12s">[video]</a><br />
+  &nbsp; Keynote Speaker at Testing Cup (10.6.2019)<br />
+  &nbsp; Speaker at Rect Finland (25.4.2019)<br />
   &nbsp; Keynote Speaker at TestInstanbul (16.4.2019)<br />
   &nbsp; Keynote Speaker at Selenium Conference India (29-30.6.2018)<br />
   &nbsp; Speaker at Software Testing Helsinki Meetup (5.10.2018)<br />
