--- a/myTalks.html
+++ b/myTalks.html
@@ -96,7 +96,7 @@
 
 <i>Intersection of Automation and Exploratory Testing</i> <a href="https://www.youtube.com/watch?v=Es4SfYog5VA&t=12s">[video]</a><br />
   &nbsp; Keynote Speaker at Testing Cup (10.6.2019)<br />
-  &nbsp; Speaker at Rect Finland (25.4.2019)<br />
+  &nbsp; Speaker at React Finland (25.4.2019)<br />
   &nbsp; Keynote Speaker at TestInstanbul (16.4.2019)<br />
   &nbsp; Keynote Speaker at Selenium Conference India (29-30.6.2018)<br />
   &nbsp; Speaker at Software Testing Helsinki Meetup (5.10.2018)<br />
