--- a/myTalks.html
+++ b/myTalks.html
@@ -192,6 +192,7 @@
 <br />
 
 <i>Exploratory Testing Work Course</i><br />
+&nbsp; Trainer for a customer organization (1-day), London, UK (16.1.2019) <br />
 &nbsp; Trainer for Alma (2-days), Helsinki, Finland (4-5.9.2018) <br />
 &nbsp; Trainer for F-Secure internal (1-day), Oulu, Finland 15.8.2018 <br />
 &nbsp; Trainer for F-Secure internal (1-day), Helsinki, Finland 19.6.2018 <br />
