--- a/myTalks.html
+++ b/myTalks.html
@@ -107,11 +107,11 @@
   &nbsp; Trainer at Conference for Association for Software Testing (CAST) 2019 (12.8.2019)<br />
 <br />
 
-<i>Practices Change - Moving to Delivering Continuously</i><br />
+<i>Practices Change - Moving to Delivering Continuously <a href="https://www.youtube.com/watch?v=J2qLwAFN7_8">[video]</a></i><br />
   &nbsp; Speaker at Agile India (22.3.2019) <br />
 <br />
 
-<i>Working without a Product Owner</i><br />
+<i>Working without a Product Owner</i> <a href="https://www.youtube.com/watch?v=ueclEflC0Mo">[video]</a><br />
   &nbsp; Speaker at Agile India (21.3.2019)<br />
 <br />
 
