--- a/TestThisBox.html
+++ b/TestThisBox.html
@@ -30,7 +30,7 @@ If it's your decision to make, it's design. If it's not, it's a requirement.
 <body>
 <form>
 <input id="box" type="text">
-<input type="button" value="ok" onclick="press()">
+<input id="button" type="button" value="ok" onclick="press()">
 <div id="output"></div>
 </form>
 </body>
