--- a/myTalks.html
+++ b/myTalks.html
@@ -68,12 +68,9 @@
 
   I will be in<br />
   <ul style="text-align: left;">
-    <li><a href="https://techexcellence.dev">Tech Excellence Conference</a> in Helsinki, Finland, June 3rd 2019</li>
-    <li><a href="https://socratesuk.org">Socrates UK Unconference</a> in London, UK, June 2019 </li>
-    <li><a href="http://testingcup.pl">Testing Cup</a> in Poznan, Poland, June 10-11th 2019</li>
-    <li><a href="https://koulutus.almatalent.fi/robo-testaus/">Robotestaus</a> in Helsinki, Finland, June 12-13th 2019 </li>
-    <li><a href="https://www.associationforsoftwaretesting.org/conference/cast2019/">Conference for Association for Software Testing (CAST)</a> in Florida, USA, August 12-15th, 2019</li>
+    <li><a href="https://serverless-architecture.io/">Serverless Architecture Conference</a>in Berlin, Germany October 15-16th 2019</li> 
     <li><a href="https://agilesummit.gr">Agile Greece Summit</a> in Athens, Greece, September 19-20th 2019</li>
+    <li><a href="http://devsharp.pl/">Dev#</a> in Gdansk, Poland, September 21st 2019 </li>
     <li><a href="https://eventil.com/events/flowcon-2019/">FlowCon</a> in Paris, France, December 12-13th 2019</li>
   </ul>
 
@@ -95,15 +92,23 @@
 <div style="text-align: left;">
 
 <i>Intersection of Automation and Exploratory Testing</i> <a href="https://www.youtube.com/watch?v=Es4SfYog5VA&t=12s">[video]</a><br />
-  &nbsp; Keynote Speaker at Testing Cup (10.6.2019)<br />
-  &nbsp; Speaker at React Finland (25.4.2019)<br />
-  &nbsp; Keynote Speaker at TestIstanbul (16.4.2019)<br />
-  &nbsp; Keynote Speaker at Selenium Conference India (29-30.6.2018)<br />
-  &nbsp; Speaker at Software Testing Helsinki Meetup (5.10.2018)<br />
+  &nbsp; Keynote Speaker at Testing Cup (10.6.2019), Poznan, Poland.<br />
+  &nbsp; Speaker at React Finland (25.4.2019), Helsinki, Finland. <br />
+  &nbsp; Keynote Speaker at TestIstanbul (16.4.2019), Istanbul, Turkey.<br />
+  &nbsp; Keynote Speaker at Selenium Conference India (29-30.6.2018), Bengaluru, India<br />
+  &nbsp; Speaker at Software Testing Helsinki Meetup (5.10.2018), Helsinki, Finland<br />
   &nbsp; Speaker at The Testing Guild Online Conference (20.6.2018)<br />
 <br />
 
-<i>Exploratory Testing on Computer Interfaces (APIs)</i><br />
+<i>Little Learning Actions for Better Feedback</i><br />
+&nbsp; Speaker at Serverless Architecture Conference 2019 (15.-16.10.2019), Berlin, Germany<br />
+<br />
+
+<i>Internal Open Source</i><br />
+&nbsp; Speaker at Tech Excellence Conference (3.6.2019)<br />
+<br />
+
+<i>Exploratory Testing on Computer Interfaces</i><br />
   &nbsp; Trainer at Conference for Association for Software Testing (CAST) 2019 (12.8.2019)<br />
 <br />
 
@@ -132,7 +137,7 @@
 &nbsp; Lecturer at Aalto University of Applied Sciences, November-December 2018<br />
 <br />
 
-<i>Quality - Learning is all that matters </i><br />
+<i>Quality - Learning is All that Matters </i><br />
 &nbsp; Keynote Speaker at company event (11.1.2019)<br />
 &nbsp; Keynote Speaker at company event (20.12.2018)<br />
 <br />
@@ -142,6 +147,7 @@
 <br />
 
 <i>Test Automation Primer, a one day course on Test Automation</i><br />
+&nbsp; Trainer at Alma Robotestaus event, Helsinki (13.6.2019)<br />
 &nbsp; Trainer at Alma Robotestaus event, Helsinki (13.6.2018)<br />
 <br />
 
