--- a/myTalks.html
+++ b/myTalks.html
@@ -68,9 +68,8 @@
 
   I will be in<br />
   <ul style="text-align: left;">
-    <li><a href="https://serverless-architecture.io/">Serverless Architecture Conference</a>in Berlin, Germany October 15-16th 2019</li> 
-    <li><a href="https://agilesummit.gr">Agile Greece Summit</a> in Athens, Greece, September 19-20th 2019</li>
-    <li><a href="http://devsharp.pl/">Dev#</a> in Gdansk, Poland, September 21st 2019 </li>
+    <li><a href="https://jaxlondon.com/">JAX London</a> in London, United Kingdom October 7-10th 2019
+    <li><a href="https://serverless-architecture.io/">Serverless Architecture Conference</a> in Berlin, Germany October 15-16th 2019</li> 
     <li><a href="https://eventil.com/events/flowcon-2019/">FlowCon</a> in Paris, France, December 12-13th 2019</li>
   </ul>
 
@@ -91,7 +90,15 @@
 <h2>FULL LIST OF SPEAKING ENGAGEMENTS</h2>
 <div style="text-align: left;">
 
+<i>Breaking Illusions with Testing</i><br />
+  &nbsp; Keynote Speaker at JAX London (9.10.2019), London, United Kingdom<br />
+  &nbsp; Speaker at Agile Greece Summit (20.9.2019), Athens, Greece<br />
+  &nbsp; Keynote Speaker at DDD Europe (31.1-1.2.2019), Amsterdam, the Netherlands<br />
+  &nbsp; Speaker at Conferencia Agile Testers - Brazilian Online Conference (28.10.2018)<br />
+<br />
+
 <i>Intersection of Automation and Exploratory Testing</i> <a href="https://www.youtube.com/watch?v=Es4SfYog5VA&t=12s">[video]</a><br />
+  &nbsp; Speaker at Dev# (21.9.2019), Gdansk, Poland.<br />
   &nbsp; Keynote Speaker at Testing Cup (10.6.2019), Poznan, Poland.<br />
   &nbsp; Speaker at React Finland (25.4.2019), Helsinki, Finland. <br />
   &nbsp; Keynote Speaker at TestIstanbul (16.4.2019), Istanbul, Turkey.<br />
@@ -100,8 +107,19 @@
   &nbsp; Speaker at The Testing Guild Online Conference (20.6.2018)<br />
 <br />
 
+<i>Quality - Learning is All that Matters </i><br />
+&nbsp; Speaker at JAX London (9.10.2019)<br />
+&nbsp; Keynote Speaker at company event (11.1.2019)<br />
+&nbsp; Keynote Speaker at company event (20.12.2018)<br />
+<br />
+
 <i>Little Learning Actions for Better Feedback</i><br />
 &nbsp; Speaker at Serverless Architecture Conference 2019 (15.-16.10.2019), Berlin, Germany<br />
+<br />
+
+<i>Mob Programming</i>
+&nbsp; Workshop facilitator at Agile Greece Summit (19.9.2019), Athens, Greece<br />
+&nbsp; Workshop facilitator at Testing Cup (10.6.2019), Poznan, Poland.<br />
 <br />
 
 <i>Internal Open Source</i><br />
@@ -120,13 +138,13 @@
   &nbsp; Speaker at Agile India (21.3.2019)<br />
 <br />
 
-<i>Breaking Illusions with Testing</i><br />
-  &nbsp; Keynote Speaker at DDD Europe (31.1-1.2.2019)<br />
-  &nbsp; Speaker at Conferencia Agile Testers - Brazilian Online Conference (28.10.2018)<br />
-<br />
-
 <i>Next Level Teamwork: Pairing and Mobbing</i><br />
   &nbsp; Keynote Speaker at TestBash Australia (19.10.2018)<br />
+<br />
+
+<i>Test Automation Primer, a one day course on Test Automation</i><br />
+&nbsp; Trainer at Alma Robotestaus event, Helsinki (13.6.2019)<br />
+&nbsp; Trainer at Alma Robotestaus event, Helsinki (13.6.2018)<br />
 <br />
 
 <i>Acceptance Testing (Hyväksymistestaus)</i><br />
@@ -137,18 +155,8 @@
 &nbsp; Lecturer at Aalto University of Applied Sciences, November-December 2018<br />
 <br />
 
-<i>Quality - Learning is All that Matters </i><br />
-&nbsp; Keynote Speaker at company event (11.1.2019)<br />
-&nbsp; Keynote Speaker at company event (20.12.2018)<br />
-<br />
-
 <i>Teaching and Coaching Exploratory Testing with an Example</i><a href="https://www.youtube.com/watch?v=ZWI6MFvxQJk">[video]</a><br />
 &nbsp; Speaker at AST Webinar (13.9.2018)<br />
-<br />
-
-<i>Test Automation Primer, a one day course on Test Automation</i><br />
-&nbsp; Trainer at Alma Robotestaus event, Helsinki (13.6.2019)<br />
-&nbsp; Trainer at Alma Robotestaus event, Helsinki (13.6.2018)<br />
 <br />
 
 <i>Java Programming with the Intentional Method</i><br />
