--- a/myTalks.html
+++ b/myTalks.html
@@ -68,9 +68,6 @@
 
   I will be in<br />
   <ul style="text-align: left;">
-    <li><a href="https://serverless-architecture.io/">Serverless Architecture Conference</a>in Berlin, Germany October 15-16th 2019</li> 
-    <li><a href="https://agilesummit.gr">Agile Greece Summit</a> in Athens, Greece, September 19-20th 2019</li>
-    <li><a href="http://devsharp.pl/">Dev#</a> in Gdansk, Poland, September 21st 2019 </li>
     <li><a href="https://eventil.com/events/flowcon-2019/">FlowCon</a> in Paris, France, December 12-13th 2019</li>
   </ul>
 
@@ -91,6 +88,10 @@
 <h2>FULL LIST OF SPEAKING ENGAGEMENTS</h2>
 <div style="text-align: left;">
 
+<i>Agile as If You Meant It</i><br />
+  &nbsp; Speaker at FlowCon (13.12.2019), Paris, France<br />
+<br />
+
 <i>Intersection of Automation and Exploratory Testing</i> <a href="https://www.youtube.com/watch?v=Es4SfYog5VA&t=12s">[video]</a><br />
   &nbsp; Keynote Speaker at Testing Cup (10.6.2019), Poznan, Poland.<br />
   &nbsp; Speaker at React Finland (25.4.2019), Helsinki, Finland. <br />
@@ -105,7 +106,7 @@
 <br />
 
 <i>Internal Open Source</i><br />
-&nbsp; Speaker at Tech Excellence Conference (3.6.2019)<br />
+&nbsp; Speaker at Tech Excellence Conference (3.6.2019), Helsinki, Finland<br />
 <br />
 
 <i>Exploratory Testing on Computer Interfaces</i><br />
