--- a/myTalks.html
+++ b/myTalks.html
@@ -90,6 +90,14 @@
 <h2>FULL LIST OF SPEAKING ENGAGEMENTS</h2>
 <div style="text-align: left;">
 
+<i>Agile as If You Meant It</i><br />
+    &nbsp; Speaker at FlowCon 2019 (13.12.2019), Paris, France<br />
+  <br />
+
+<i>Exploratory Testing on Computer Interfaces</i><br />
+    &nbsp; Keynote Speaker at API Conf 2019 (16.10.2019), Berlin, Germany<br />
+  <br />
+
 <i>Breaking Illusions with Testing</i><br />
   &nbsp; Keynote Speaker at JAX London (9.10.2019), London, United Kingdom<br />
   &nbsp; Speaker at Agile Greece Summit (20.9.2019), Athens, Greece<br />
@@ -108,9 +116,9 @@
 <br />
 
 <i>Quality - Learning is All that Matters </i><br />
-&nbsp; Speaker at JAX London (9.10.2019)<br />
-&nbsp; Keynote Speaker at company event (11.1.2019)<br />
-&nbsp; Keynote Speaker at company event (20.12.2018)<br />
+&nbsp; Speaker at JAX London (9.10.2019), London, United Kingdom<br />
+&nbsp; Keynote Speaker at company event (11.1.2019), Helsinki, Finland<br />
+&nbsp; Keynote Speaker at company event (20.12.2018), Helsinki, Finland<br />
 <br />
 
 <i>Little Learning Actions for Better Feedback</i><br />
@@ -127,19 +135,19 @@
 <br />
 
 <i>Exploratory Testing on Computer Interfaces</i><br />
-  &nbsp; Trainer at Conference for Association for Software Testing (CAST) 2019 (12.8.2019)<br />
+  &nbsp; Trainer at Conference for Association for Software Testing (CAST) 2019 (12.8.2019), Cocoa Beach, Florida, USA<br />
 <br />
 
 <i>Practices Change - Moving to Delivering Continuously <a href="https://www.youtube.com/watch?v=J2qLwAFN7_8">[video]</a></i><br />
-  &nbsp; Speaker at Agile India (22.3.2019) <br />
+  &nbsp; Speaker at Agile India (22.3.2019), Bengaluru, India <br />
 <br />
 
 <i>Working without a Product Owner</i> <a href="https://www.youtube.com/watch?v=ueclEflC0Mo">[video]</a><br />
-  &nbsp; Speaker at Agile India (21.3.2019)<br />
+  &nbsp; Speaker at Agile India (21.3.2019), Bengaluru, India<br />
 <br />
 
 <i>Next Level Teamwork: Pairing and Mobbing</i><br />
-  &nbsp; Keynote Speaker at TestBash Australia (19.10.2018)<br />
+  &nbsp; Keynote Speaker at TestBash Australia (19.10.2018), Sydney, Australia<br />
 <br />
 
 <i>Test Automation Primer, a one day course on Test Automation</i><br />
